horizontal scrollbar over 768px fixed

--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,10 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+ @media screen and (min-width:769px) and (max-width: 1160px){
+    .container{
+        width: 100%;
+    }
+ }
